# dmitryc-raytracer

./: CMakeLists.txt  README.md  additionals.h  camera.h  first-sphere-scene.h  img.ppm  main.cpp  object-list.h  object.h  performance-testing.h  ray-testing-scene.h  ray.h  scene.h  shaded-sphere-scene.h  simple-image-testing-scene.h  sphere-and-plane-scene.h  vec-old.h  vec-optimized.h  vec.cpp  vec.h
benchmarks/: scene.txt  vec.txt
